# MTGCN

./: .gitignore  M-GATv2-batch-v2.py  M-GATv2-batch.py  M-GT-poly-R.py  M-GT-v2.py  M-GT-v3.py  M-GT-v4.py  M-GT.py  M-bce-GAT.py  M-bce-GATv2.py  M-bce.py  M.py  MTGCN.py  MYMODEL.py  data_transform.py  decode.ipynb  deepwalk.py  load_data.py  pyproject.toml  requirements.txt  test.ipynb  tuning_single_run_log.csv
mlruns/1/models/m-00bf55099c944bc7aeafa032a5adc2cd/artifacts/: MLmodel
mlruns/1/models/m-094df8c78bf64680a574c0178baba0c5/artifacts/: MLmodel  requirements.txt
mlruns/1/models/m-f362aef1ff5b457db122e2c5395d19c1/artifacts/: MLmodel
mlruns/2/models/m-3a79cd8d0bae41eba4307cef938d12dd/artifacts/: MLmodel
mlruns/2/models/m-7f9d4977c7ae4791b0f830184622331f/artifacts/: MLmodel
mlruns/2/models/m-85226aa83da54c9faa3d893b40541d83/artifacts/: MLmodel
mlruns/2/models/m-ff5b913e5c234becb205b43f09615c1d/artifacts/: MLmodel  conda.yaml
mlruns/4/models/m-5a51e060bf1b41509f39fd70a1b6de0c/artifacts/: MLmodel
